[gd_scene load_steps=5 format=3 uid="uid://qdr0ve6l030r"]

[ext_resource type="Texture2D" uid="uid://bj46te7e50uib" path="res://background.png" id="1_o4ems"]
[ext_resource type="Texture2D" uid="uid://chkalgewki3dl" path="res://title.png" id="2_k8fla"]
[ext_resource type="Texture2D" uid="uid://6fc772ms5xjb" path="res://new_game_button.png" id="3_8s1m7"]
[ext_resource type="Script" path="res://new_game_button.gd" id="4_c2mo5"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuBackground" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1668.0
offset_bottom = 2388.0
texture = ExtResource("1_o4ems")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 134.0
offset_top = 166.0
offset_right = 1018.0
offset_bottom = 482.0
alignment = 1

[node name="GameTitle" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_k8fla")

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_8s1m7")
flat = true
icon_alignment = 1
script = ExtResource("4_c2mo5")

[connection signal="button_down" from="VBoxContainer/NewGameButton" to="VBoxContainer/NewGameButton" method="_on_button_down"]
[connection signal="button_up" from="VBoxContainer/NewGameButton" to="VBoxContainer/NewGameButton" method="_on_button_up"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="VBoxContainer/NewGameButton" method="_on_pressed"]
